Fix blurry table in modal

--- a/src/components/ReportInfoPanelWrapper.scss
+++ b/src/components/ReportInfoPanelWrapper.scss
@@ -6,4 +6,5 @@
   display: flex;
   min-height: 0;
   flex: 1;
+  overflow: visible !important;
 }
